docker-registry/ingress-router.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-ingress-router
  namespace: docker-registry
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`registry.lipcloud.org`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: docker-registry-service
          port: 5000
